2015-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am (xetex_CFLAGS): Enable compiler warnings.
	* xetex.web: Drop unused label 'done'.

2015-07-24  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* xetex.web, xetex.h: Support pagebox=artbox etc. as in pdfTeX
	in PDF inclusion. It works with a new xetex.def and xdvipdfmx.
	Nothing changes if the present xetex.def is used.

2015-07-11  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* xetex.web: Change \pdfmdfivesum to \mdfivesum, to be consistent
	with \strcmp and \shellescape.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Dependencies for 'make check'.

2015-07-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* xetex.web: Added \pdfmdfivesum, version 0.99993.
	* xetex.defines: Added getmd5sum().
	* am/xetex.am: Added libmd5.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Use $(tie_c).

2015-05-07  Jonathan Kew  <jfkthame@gmail.com>

	* xetex.web: Merged UTF-16 surrogate-handling fixes from github.
	* xetex.web: New \Uchar and \Ucharcat primitives.

2015-05-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.c: Can not use non-locking getc() for MinGW.

2015-05-03  Jonathan Kew  <jfkthame@gmail.com>

	* XeTeX_ext.c: use non-locking getc() for faster file reading.

2015-03-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/mfileio.[ch]: Use mfgets() parameters as for fgets().

2015-03-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/jpegimage.c: Drop redundant #include directives.
	* image/{mfileio,numbers}.c: First '#include <w2c/config.h>'.
	* image/mfileio.h, image/numbers.[ch]: Drop unused types and
	functions.

2015-03-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: The SELFAUTOLOC issue has been considered on W32
	independently.

2015-03-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex-bug73.test: The equivalent of 'tail -n+2' is 'sed 1d'.

2015-03-16  Karl Berry  <karl@tug.org>
